[gd_scene load_steps=5 format=2]

[ext_resource path="res://Actors/enemies/testturret/TestTurretModel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/enemies/testturret/testturret.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
height = 3.0

[sub_resource type="SphereShape" id=2]
radius = 40.0

[node name="TestTurret" type="KinematicBody"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Body" parent="." instance=ExtResource( 1 )]

[node name="ProjectileOrigin" type="Position3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, -1.25 )

[node name="RayCast" type="RayCast" parent="Body/ProjectileOrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.25 )
enabled = true
cast_to = Vector3( 0, 0, -40 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="Timer_Fire" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer_Fire" to="." method="_on_Timer_Fire_timeout"]

[editable path="Body"]
